
UTILITIES

    o `seqDigest(f, "annotation/filter")` works on a factor variable

    o improve the computational efficiency of `seqMerge()` to avoid genotype
      recompression by padding the 2-bit genotype array in bytes

    o significantly improve `seqBlockApply()` (its speed is close to
      `seqApply()`)

    o reduce the overhead in `seqSetFilter(, variant.sel=...)`

NEW FEATURES

    o `seqGDS2VCF()` outputs a bgzip vcf file with tabix indexing

    o two more options "Ultra" and "UltraMax" in `seqStorageOption()`

    o '@chrom_rle_val' and '@chrom_rle_len' are added to a GDS file for
      faster chromosome indexing

    o new function `seqBCF2GDS()`


CHANGES IN VERSION 1.18.1-1.18.2
-------------------------

BUG FIXES

    o fix an issue: `seqSetFilterChrom()` extends a genomic range
      upstream and downstream 1bp

    o use `.onLoad()` instead of `.onAttach()` to fix
      https://support.bioconductor.org/p/104405/#104443


CHANGES IN VERSION 1.18.0
-------------------------

NEW FEATURES

    o progress information: showing overall running time when completed

    o new variable names "$ref" and "$alt" can be used in `seqGetData()` and
      `seqBlockApply()`

    o new argument '.progress' in `seqDigest()`

    o new argument 'ref.allele' in `seqAlleleCount()`

    o new variable name "$chrom_pos_allele" can be used in `seqGetData()` and
      `seqBlockApply()`

UTILITIES

    o move VariantAnnotation to the suggest field from the import field

    o remove an unused argument '.list_dup' in `seqBlockApply()`

    o slightly improve the computational efficiency of `seqAlleleFreq()` and
      `seqAlleleCount()` when 'ref.allele=0'

    o `seqGetData(f, "$chrom_pos")` outputs characters with the format
      'chromosome:position' instead of 'chromosome_position'

BUG FIXES

    o fix the unexpected behaviors in `seqSetFilter(, action="push")` and
      `seqSetFilter(, action="push+intersect")`
